--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,22 +7,31 @@ on:
   pull_request:
     paths:
       - '**/**'  # 监控所有文件的更改
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        distribution: 'temurin'
-        java-version: '11'
+        java-version: '17'
+        distribution: 'adopt'
+        cache: gradle
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
     - name: Build with Gradle
       run: ./gradlew build
+
+    - name: Archive JAR file
+      uses: actions/upload-artifact@v3
+      with:
+        name: ResidenceWCC
+        path: build/libs/*.jar
